hphp/test/zend/good/ext/standard/tests/array/bug52719.php
<?php
$array = array("hello", array("world"));
$userdata = array();
array_walk_recursive(
    $array,
    function ($value, $key, &$userdata) { },
    $userdata
);
echo "Done";
?>